# AtlasHttp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_mac.txt  CMakeLists_win.txt  CMakeSettings.json  __CMakeSettings.json  main.cpp  vcpkg.json
.github/workflows/: build.yml
Include/: HttpServer.h  Logger.h  MetricManager.h  Namespace.h
Include/HttpServer/: AsyncReaderWriter.h  HttpServer.h
a/: ConnectionContext.h  HttpServer.h
example/: CMakeLists.txt  EndpointPopulator.h  main.cpp  main_client_example.cpp
include/: AsyncMethodResponder.h  AsyncReader.h  AsyncReaderWriter.h  AsyncRequestProcessor.h  ConnectionContext.h  HttpClient.h  HttpLogs.h  HttpServer.h  MetricManager.h  WebSocketSession.h
